# eduland

./: .dockerignore  .env.django.example  .env.example  .gitignore  Dockerfile  Makefile  compose-vite.yaml  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml
.docker/caddy_data/caddy/: instance.uuid  last_clean.json
.github/workflows/: docker-image.yaml
apps/core/: apps.py  blocks.py  ftl_bundles.py  utils.py  views.py  wagtail_hooks.py
apps/core/templates/: home.html
apps/education/: blocks.py  models.py  views.py  wagtail_hooks.py
apps/education/migrations/: 0001_initial.py  0002_exercise.py  0003_unitpage_body.py  0004_alter_unitpage_body.py  0005_exercisepage_remove_unitpage_description_and_more.py  0008_alter_unitpage_body.py  0009_alter_exercise_data.py  0011_exercisepage_streamfield_to_foreignkey.py  0012_remove_exercise_description_alter_exercise_name_and_more.py  0013_methodologypage.py  0014_remove_modulepage_image.py
apps/home/: models.py
apps/home/migrations/: 0001_initial.py  0004_homepage_about.py  0005_alter_homepage_hero_image.py  0006_homepage_modules.py  0007_alter_homepage_modules.py  0008_remove_homepage_hero_cta_link_and_more.py  0009_homepage_comics.py  0010_aboutpage.py  0011_newsindexpage_newspost.py
config/: .env.example  context_processors.py  converters.py  logging.py  menus.py  rsgi.py  settings.py  urls.py  utils.py
config/public/: site.webmanifest
config/static/: inalco_logo.avif  theme.css
config/static/fonts/: OFL.txt  gobocaps.css
etc/caddy/: Caddyfile  Caddyfile.vite
public/static/: eduland.css
src/: .env.django  .pg_service.conf
src/apps/core/: apps.py  blocks.py  context_processors.py  utils.py  views.py  wagtail_hooks.py
src/apps/education/: admin.py  blocks.py  models.py  views.py  wagtail_hooks.py
src/apps/home/: models.py
src/config/: asgi.py  context_processors.py  error_tracking.py  menus.py  rsgi.py  settings.py  urls.py  utils.py  wsgi.py
src/public/: robots.txt
src/public/static/: Co-funded-by-the-EU.avif  eduland.css  ikso_emblemo_blanka.avif  theme.css
ui/: auto-imports.d.ts  components.d.ts  package-lock.json  package.json  vite.config.mts
ui/src/: Editor.vue  Exercise.vue  editor.ts  exercise.ts  main.ts  types.ts
ui/src/components/: CopyTextField.vue  ExerciseFooterAttributes.vue  ExerciseListItem.vue  OptionsSelector.vue  PlayGapSelect.vue  RichContent.vue  RichContentImage.vue  RichContentSound.vue  SheetEditor.vue  SheetReview.vue  UnitDefault.vue  UnitMultipleChoice.vue  UnitMultipleChoiceCheckbox.vue  UnitOpenAnswer.vue  UnitOpenAnswerTextField.vue  UnitPairing.vue  index.ts
ui/src/composables/: useApiFetch.ts  useCefr.ts  useConfettiShoot.ts  useLangsAvailable.ts  useShuffleArray.ts  useTokenize.ts  useUnitComponent.ts
ui/src/locales/: en.json  eo.json  fr.json  sk.json
ui/src/plugins/: i18n.ts  index.ts  vuetify.ts
(+109 files in other folders)
