[project]
name = "eduland"
version = "0.1.0"
description = "EduLand: lernu lingvojn per komiksoj"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0.2",
  "django-cors-headers>=4.9.0",
  "django-extensions>=4.1",
  "django-ftl>=0.14",
  "django-vite>=3.1.0",
  "granian>=2.7.1",
  "psycopg[binary]>=3.2.10",
  "toml-decouple==0.6.0",
  "wagtail>=7.3",
  "wagtail-localize>=1.12.2",
  "wagtail-localize-intentional-blanks>=0.2.4",
  "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
  "django-debug-toolbar>=6.2.0",
  "django-types>=0.22.0",
  "pyasyncore>=1.0.4",
  "pyinotify>=0.9.6",
  "ruff>=0.15",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
ignore = ["E731"] # lambda/def

[tool.ruff.lint.isort]
known-third-party = ["django", "wagtail"]
